Chore: eslint변경, 헤더 cursor:pointer 제거

--- a/next-ts/sass/header/styles.scss
+++ b/next-ts/sass/header/styles.scss
@@ -1,4 +1,4 @@
-@import "../color.scss";
+@import '../color.scss';
 
 .header {
   box-shadow: $grey200 0px 8px 24px;
@@ -9,5 +9,4 @@
 }
 .header__list_El {
   padding: 25px;
-  cursor: pointer;
 }
